2/2.9/back/manifest/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ping-pong-namespace
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: kostikorhonen/back:latest
