2/2.9/back/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-pong-ingress
  namespace: ping-pong-namespace
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: log-svc
            port:
              number: 2345
      - path: /click
        pathType: Prefix
        backend:
          service:
            name: log-svc
            port:
              number: 2345
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pong-db-svc
            port:
              number: 2346
